# chat-widget

./: .env.copy  README.md  alembic.ini  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 0b3b1f141934_change_chat_relationship.py  1fe861a67732_change_chat_relationship.py  446fd5675b78_change_enum_val.py  48dd9decb0da_add_user_files.py  77d496fd3e54_add_user_files_table.py  846f86e2a249_add_user_files_table_rel.py  ab4781a73c31_initial_migration.py  c4069a3d118f_rename_table.py  e038c5189ef1_add_user_files.py
app/: auth_router.py  config.py  main.py  models.py
app/agents/: code_generator.py
app/models/: __init__.py  chat.py  chat_line.py  message.py  user.py  user_file.py
app/tests/: api_tests.py
output/users/5321434b-cee3-4aee-8608-aead1db402dc/: 5_love_languages_v1.pptx
output/users/d0bcab78-94b3-4543-b77f-f8cff0a140c1/: How_to_Treat_an_Upset_Stomach_v1.pptx  Upset_Stomach_Remedies_v1.pptx  Upset_Stomach_Treatment.pptx  artisan_presentation_v1.pptx  leadership_presentation.pptx  love_presentation_v1.pptx  love_presentation_v2.pptx  presentation_on_love_v1.pptx
widget-frontend/: package-lock.json  package.json
widget-frontend/src/app/: page.tsx
widget-frontend/src/app/components/: ChatWidget.tsx  Chatbot.tsx  ChatbotWithAuth.tsx
widget-frontend/src/app/css/: ChatWidget.module.css
